--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   "homepage": "https://github.com/camilleferraz/projeto-labecommerce-backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "knex": "^2.4.2",
-    "sqlite3": "^5.1.4"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
